[package]
name = "aphily"
version = "0.0.1"
authors = ["Zhang Canxiang <haisunsuan@163.com>"]
edition = "2021"
description = "A fast and safe tool for data analysis."
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
